Archive2/46/cf19536c85943b/output
main.cpp:12:9: error: use of undeclared identifier 'g'
        g();        // 1
        ^
main.cpp:13:9: error: use of undeclared identifier 'k'
        k();        // 2
        ^
main.cpp:22:5: error: use of undeclared identifier 'g'
    g();  // 4
    ^
3 errors generated.
